feat: 更灵活的设置